# metrics-server

./: .dockerignore  .gitignore  .golangci.yml  .travis.yml  BUILD  CONTRIBUTING.md  Dockerfile  FAQ.md  Gopkg.toml  KNOWN_ISSUES.md  Makefile  OWNERS  OWNERS_ALIASES  README.md  RELEASE.md  SECURITY.md  SECURITY_CONTACTS  WORKSPACE  artifacthub-repo.yml  cloudbuild.yaml  code-of-conduct.md  go.mod  go.sum  index.md  index.yaml  metrics-server.spec  skaffold.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug-report.md  enhancement.md  support.md
.github/workflows/: chart-lint-test.yaml  chart-release.yaml  gh-workflow-approve.yaml  lint-test-chart.yaml  release-chart.yaml  release.yaml  semantic.yml  spectro-release.yaml
.openvex/templates/: main.openvex.json
Godeps/: Godeps.json
charts/metrics-server/: CHANGELOG.md  Chart.yaml  README.md  values.yaml
charts/metrics-server/ci/: ci-values.yaml  tls-certManager-values.yaml  tls-existingSecret-values.yaml  tls-helm-values.yaml
charts/metrics-server/templates/: NOTES.txt  _helpers.tpl  apiservice.yaml  certificate.yaml  certmanager.yaml  clusterrole-aggregated-reader.yaml  clusterrole-nanny.yaml  clusterrole.yaml  clusterrolebinding-auth-delegator.yaml  clusterrolebinding-nanny.yaml  clusterrolebinding.yaml  configmaps-nanny.yaml  deployment.yaml  hpa.yaml  pdb.yaml  psp.yaml  role-nanny.yaml  rolebinding-nanny.yaml  rolebinding.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
cmd/metrics-server/: BUILD.bazel  heapster.go  metrics-server.go
cmd/metrics-server/app/: BUILD.bazel  start.go
cmd/metrics-server/app/options/: kubelet_client.go  kubelet_client_test.go  options.go  options_test.go
common/elasticsearch/: elasticsearch.go  elasticsearch_test.go  mapping.go
common/influxdb/: influxdb.go
common/kubernetes/: configs.go
common/librato/: librato_test.go
deploy/: metrics-server-deployment.yaml
deploy/1.7/: metrics-server-deployment.yaml
deploy/1.8+/: kustomization.yaml  metrics-server-deployment.yaml  psp.yaml  resource-reader.yaml
deploy/docker/: Dockerfile
deploy/kubernetes/: Kustomization  aggregated-metrics-reader.yaml  metrics-server-deployment.yaml  metrics-server-pdb.yaml  metrics-server-service.yaml
docs/: command-line-flags.txt
hack/: Makefile.buildinfo  boilerplate.go.txt  calc-build-info.sh  init-buildx.sh  status.sh
hack/lib/: constants.sh
hack/scripts/: export-variables.sh  remove-images.sh
images/metrics-server/: Dockerfile
manifests/: metrics-server-deployment.yaml
manifests/autoscale/: kustomization.yaml  patch.yaml  rbac.yaml
manifests/base/: apiservice.yaml  deployment.yaml  kustomization.yaml  pdb.yaml  rbac.yaml  service.yaml
manifests/components/autoscale/: kustomization.yaml  patch.yaml  rbac.yaml
manifests/components/high-availability/: kustomization.yaml  patch.yaml  pdb.yaml
manifests/components/high-availability-1.21+/: kustomization.yaml
manifests/components/release/: kustomization.yaml
manifests/components/test/: kustomization.yaml
manifests/components/test-client-certs/: .gitignore  kustomization.yaml
manifests/high-availability/: kustomization.yaml  patch.yaml  pdb.yaml
manifests/high-availability-1.21+/: patch-pdb-version.yaml
manifests/high-availability-1.25+/: kustomization.yaml
manifests/release/: kustomization.yaml
manifests/test/: kustomization.yaml  patch.yaml
manifests/test-ha/: kustomization.yaml
metrics/: auth.go  handlers.go  heapster.go  heapster_test.go
metrics/api/v1/: api.go  api_test.go  (+3 more)
metrics/core/: types.go
metrics/manager/: manager.go  manager_test.go
metrics/options/: options.go
metrics/processors/: cluster_aggregator.go  cluster_aggregator_test.go  helper.go  namespace_aggregator.go  namespace_aggregator_test.go  namespace_based_enricher.go  node_aggregator.go  node_aggregator_test.go  node_autoscaling_enricher.go  pod_aggregator.go  pod_aggregator_test.go  pod_based_enricher.go  pod_based_enricher_test.go  rate_calculator.go  rate_calculator_test.go
metrics/provider/: interfaces.go  sinkprov.go
metrics/sink/: interfaces.go
metrics/sinks/: factory.go  manager.go  manager_test.go
metrics/sources/: factory.go  manager.go  manager_test.go
metrics/util/: dummies.go  util.go
pkg/api/: filter.go  install.go  interfaces.go  monitoring.go  node.go  node_test.go  pod.go  pod_test.go  table.go  table_test.go  time.go  watcher.go  watcher_test.go
pkg/apiserver/: BUILD.bazel  config.go
pkg/apiserver/generic/: BUILD.bazel  storage.go
pkg/manager/: BUILD.bazel  manager.go  manager_test.go
pkg/metrics/: BUILD.bazel  util.go  util_test.go
pkg/metrics-server/: config.go  server.go  server_test.go
pkg/provider/: BUILD.bazel  interfaces.go  sinkprov.go  sinkprov_test.go
pkg/provider/sink/: BUILD.bazel  sinkprov.go  sinkprov_test.go
pkg/scraper/: client.go  configs.go  decode.go  decode_test.go  interface.go  scraper.go  scraper_test.go  types.go  types_easyjson.go  types_test.go
pkg/server/: config.go  health.go  informer.go  metrics.go  scraper_benchmark_test.go  server.go  server_test.go
pkg/sink/: BUILD.bazel  interfaces.go
pkg/sources/: BUILD.bazel  interfaces.go  manager.go  manager_test.go
pkg/sources/fake/: BUILD.bazel  fakes.go
pkg/sources/summary/: BUILD.bazel  addrs.go  client.go  configs.go  summary.go  summary_test.go
pkg/storage/: interface.go  main_test.go  monitoring.go  node.go  node_test.go  pod.go  pod_test.go  ready_test.go  storage.go  storage_benchmark_test.go  storage_test.go  types.go  types_test.go
pkg/storage/podmetrics/: BUILD.bazel  reststorage.go  reststorage_test.go
pkg/utils/: address_resolver.go  monitoring.go  monitoring_test.go
pkg/version/: BUILD.bazel
scripts/: boilerplate.go.txt  go.mod  go.sum  tools.go
test/: BUILD.bazel  chart-values.yaml  e2e.sh  e2e_test.go  kind-config-with-sidecar-containers.yaml  kind-config.yaml  kind-ha-config.yaml  test-cli.sh  test-e2e.sh  test-image.sh  version.sh
tools/junitreport/: junitreport.go
undeploy/: cleanup.sh
version/: version.go
(+95 files in other folders)
