load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["config.go"],
    importpath = "sigs.k8s.io/metrics-server/pkg/apiserver",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apiserver/generic:go_default_library",
        "//pkg/generated/openapi:go_default_library",
        "//pkg/version:go_default_library",
        "@io_k8s_apiserver//pkg/endpoints/openapi:go_default_library",
        "@io_k8s_apiserver//pkg/server:go_default_library",
        "@io_k8s_client_go//informers:go_default_library",
    ],
)
