load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "interfaces.go",
        "manager.go",
    ],
    importpath = "sigs.k8s.io/metrics-server/pkg/sources",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/metrics:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@io_k8s_apimachinery//pkg/api/resource:go_default_library",
        "@io_k8s_apimachinery//pkg/util/errors:go_default_library",
        "@io_k8s_klog//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["manager_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/sources/fake:go_default_library",
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
        "@io_k8s_apimachinery//pkg/api/resource:go_default_library",
    ],
)
