load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["sinkprov.go"],
    importpath = "sigs.k8s.io/metrics-server/pkg/provider/sink",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/provider:go_default_library",
        "//pkg/sink:go_default_library",
        "//pkg/sources:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_klog//:go_default_library",
        "@io_k8s_metrics//pkg/apis/metrics:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["sinkprov_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/provider:go_default_library",
        "//pkg/sink:go_default_library",
        "//pkg/sources:go_default_library",
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/resource:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_metrics//pkg/apis/metrics:go_default_library",
    ],
)
