load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["reststorage.go"],
    importpath = "sigs.k8s.io/metrics-server/pkg/storage/podmetrics",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/provider:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/internalversion:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/fields:go_default_library",
        "@io_k8s_apimachinery//pkg/labels:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_apiserver//pkg/endpoints/request:go_default_library",
        "@io_k8s_apiserver//pkg/registry/generic:go_default_library",
        "@io_k8s_apiserver//pkg/registry/rest:go_default_library",
        "@io_k8s_client_go//listers/core/v1:go_default_library",
        "@io_k8s_klog//:go_default_library",
        "@io_k8s_metrics//pkg/apis/metrics:go_default_library",
        "@io_k8s_metrics//pkg/apis/metrics/install:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["reststorage_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/provider:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/internalversion:go_default_library",
        "@io_k8s_apimachinery//pkg/fields:go_default_library",
        "@io_k8s_apimachinery//pkg/labels:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_apimachinery//pkg/util/diff:go_default_library",
        "@io_k8s_apiserver//pkg/endpoints/request:go_default_library",
        "@io_k8s_client_go//listers/core/v1:go_default_library",
        "@io_k8s_metrics//pkg/apis/metrics:go_default_library",
    ],
)
